<?xml version="1.0"?>
<package format="2">
  <name>cslam_coppelia_bridge</name>
  <version>1.0.0</version>
  <description>CoppeliaSim to DCL-SLAM bridge node</description>
  <maintainer email="hiroki@example.com">hiroki</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf</exec_depend>
</package>
